# mae_vit

./: .gitignore  README.md  main.py  pyproject.toml  run.txt
data/: nih_splits.csv  tb_labels_with_splits.csv
notebooks/: data_check.ipynb  dataprep.ipynb  train.ipynb  train_vit.ipynb  trainmae.ipynb
src/data/: datasets.py  transforms.py
src/models/: mae.py  vit.py
