[project]
name = "vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "tqdm>=4.67.1",
]
